--- a/exercise_1_2.ipynb
+++ b/exercise_1_2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(506, 13)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "       'TAX', 'PTRATIO', 'B', 'LSTAT'], dtype='<U7')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "array([24. , 21.6, 34.7, 33.4, 36.2, 28.7, 22.9, 27.1, 16.5, 18.9])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "4     18.7  396.90   5.33  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -323,23 +323,23 @@
     }
    ],
    "source": [
-    "y = pd.DataFrame(target, columns=[\"price\"])\n",
-    "y.info()"
+    "Y = pd.DataFrame(target, columns=[\"price\"])\n",
+    "Y.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.30, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "(152, 1)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -428,54 +428,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>12.5</td>\n",
-       "      <td>19.547591</td>\n",
+       "      <th>173</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>28.648960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>14.1</td>\n",
-       "      <td>19.129466</td>\n",
+       "      <th>274</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>36.495014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>18.2</td>\n",
-       "      <td>18.405155</td>\n",
+       "      <th>491</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>15.411193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>15.6</td>\n",
-       "      <td>15.800205</td>\n",
+       "      <th>72</th>\n",
+       "      <td>22.8</td>\n",
+       "      <td>25.403213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>14.1</td>\n",
-       "      <td>17.948177</td>\n",
+       "      <th>452</th>\n",
+       "      <td>16.1</td>\n",
+       "      <td>18.855280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24.775279</td>\n",
+       "      <th>76</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>23.146689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>27.5</td>\n",
-       "      <td>24.825894</td>\n",
+       "      <th>316</th>\n",
+       "      <td>17.8</td>\n",
+       "      <td>17.392124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>473</th>\n",
-       "      <td>29.8</td>\n",
-       "      <td>25.868660</td>\n",
+       "      <th>140</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.078599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>11.8</td>\n",
-       "      <td>7.744954</td>\n",
+       "      <th>471</th>\n",
+       "      <td>19.6</td>\n",
+       "      <td>23.036927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>13.4</td>\n",
-       "      <td>13.328063</td>\n",
+       "      <th>500</th>\n",
+       "      <td>16.8</td>\n",
+       "      <td>20.599433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -483,19 +483,19 @@
       ],
       "text/plain": [
        "     y_test     y_pred\n",
-       "396    12.5  19.547591\n",
-       "431    14.1  19.129466\n",
-       "19     18.2  18.405155\n",
-       "24     15.6  15.800205\n",
-       "448    14.1  17.948177\n",
-       "235    24.0  24.775279\n",
-       "100    27.5  24.825894\n",
-       "473    29.8  25.868660\n",
-       "144    11.8   7.744954\n",
-       "142    13.4  13.328063"
+       "173    23.6  28.648960\n",
+       "274    32.4  36.495014\n",
+       "491    13.6  15.411193\n",
+       "72     22.8  25.403213\n",
+       "452    16.1  18.855280\n",
+       "76     20.0  23.146689\n",
+       "316    17.8  17.392124\n",
+       "140    14.0  14.078599\n",
+       "471    19.6  23.036927\n",
+       "500    16.8  20.599433"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8734204379904937"
+       "0.7112260057484973"
       ]
      },
      "execution_count": 41,
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "RandomForestRegressor(max_depth=12, n_estimators=1000, random_state=42)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "(152,)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -638,54 +638,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>12.5</td>\n",
-       "      <td>15.497911</td>\n",
+       "      <th>173</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>22.806412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>14.1</td>\n",
-       "      <td>19.793592</td>\n",
+       "      <th>274</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>31.131464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>18.2</td>\n",
-       "      <td>19.791578</td>\n",
+       "      <th>491</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>16.339125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>15.6</td>\n",
-       "      <td>17.499378</td>\n",
+       "      <th>72</th>\n",
+       "      <td>22.8</td>\n",
+       "      <td>23.810726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>14.1</td>\n",
-       "      <td>13.423972</td>\n",
+       "      <th>452</th>\n",
+       "      <td>16.1</td>\n",
+       "      <td>17.139521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>22.532979</td>\n",
+       "      <th>76</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>21.832284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>27.5</td>\n",
-       "      <td>25.415941</td>\n",
+       "      <th>316</th>\n",
+       "      <td>17.8</td>\n",
+       "      <td>19.895747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>473</th>\n",
-       "      <td>29.8</td>\n",
-       "      <td>25.091486</td>\n",
+       "      <th>140</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.754118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>11.8</td>\n",
-       "      <td>14.853174</td>\n",
+       "      <th>471</th>\n",
+       "      <td>19.6</td>\n",
+       "      <td>21.240835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>13.4</td>\n",
-       "      <td>15.447849</td>\n",
+       "      <th>500</th>\n",
+       "      <td>16.8</td>\n",
+       "      <td>20.898658</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -693,19 +693,19 @@
       ],
       "text/plain": [
        "     y_test     y_pred\n",
-       "396    12.5  15.497911\n",
-       "431    14.1  19.793592\n",
-       "19     18.2  19.791578\n",
-       "24     15.6  17.499378\n",
-       "448    14.1  13.423972\n",
-       "235    24.0  22.532979\n",
-       "100    27.5  25.415941\n",
-       "473    29.8  25.091486\n",
-       "144    11.8  14.853174\n",
-       "142    13.4  15.447849"
+       "173    23.6  22.806412\n",
+       "274    32.4  31.131464\n",
+       "491    13.6  16.339125\n",
+       "72     22.8  23.810726\n",
+       "452    16.1  17.139521\n",
+       "76     20.0  21.832284\n",
+       "316    17.8  19.895747\n",
+       "140    14.0  14.754118\n",
+       "471    19.6  21.240835\n",
+       "500    16.8  20.898658"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,16 +720,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8499786297712565"
+       "0.8479049999699443"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -750,13 +750,13 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(y_test, y_pred)>r2_score_2"
+    "r2_score(y_test, y_pred)<r2_score_2"
    ]
   },
   {
@@ -774,7 +774,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "В данном случае модель линейной регрессии класса LinearRegression работает лучше, чем модель RandomForestRegressor."
+    "В данном случае модель линейной регрессии класса LinearRegression работает хуже, чем модель RandomForestRegressor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Задание 3\n",
+    "Вызовите документацию для класса RandomForestRegressor,\n",
+    "найдите информацию об атрибуте feature_importances_.\n",
+    "С помощью этого атрибута найдите сумму всех показателей важности,\n",
+    "установите, какие два признака показывают наибольшую важность.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.03167574 0.00154252 0.00713813 0.00123624 0.01426897 0.40268179\n",
+      " 0.01429864 0.06397257 0.00528122 0.01152493 0.01808108 0.01245085\n",
+      " 0.41584732]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.feature_importances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.feature_importances_.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_value_idx1=model.feature_importances_.argmax()\n",
+    "max_value_idx1"
    ]
   }
  ],
